--- a/Source/Game.vcxproj
+++ b/Source/Game.vcxproj
@@ -289,6 +289,7 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
     <ClInclude Include="QuestManager.h" />
     <ClInclude Include="Render.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="SceneIntro.h" />
     <ClInclude Include="SceneLogo.h" />
     <ClInclude Include="Textures.h" />
@@ -306,6 +307,12 @@ copy "$(SolutionDir)bin\libs\Release\$(PlatformShortName)\SDL_Image\external\Zli
   </ItemGroup>
   <ItemGroup>
     <Xml Include="Resources\config.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="GameIcon.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resources\gui\icon_256x256.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
